# optimParallel-python

./: .travis.yml  MANIFEST.in  Makefile  README.md  example.py  example_extended.ipynb  example_windows_os.py  expamle.py  pyproject.toml  setup.py  test-requirements.txt  to_test_on_windows.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_issue.md
.github/workflows/: python-package.yml
minipar/: minipar.py
optimParallel/: optimParallel.py
src/: optimparallel.py
test/: __init__.py  test_fmin_l_bfgs_b_parallel.py  test_minimize_parallel.py
