[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "optimparallel"
version = "0.1.4"
authors = [{ name = "Florian Gerber", email = "flora.fauna.gerber@gmail.com" }, {name = "Lewis Blake"}]
description = "A parallel version of the L-BFGS-B optimizer of scipy.optimize.minimize()."
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "scipy", 
    "numpy",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/florafauna/optimParallel-python"
"Bug Tracker" = "https://github.com/florafauna/optimParallel-python/issues"
"Source Code" = "https://github.com/florafauna/optimParallel-python"

[project.optional-dependencies]
test = [
    "pytest",
]
lint = ["mypy", "black"]
dev = ["pytest-sugar"]

# tox (https://tox.readthedocs.io/) is a tool for running tests
# in multiple virtualenvs. This configuration file will run the
# test suite on all supported python versions. To use it, "pip install tox"
# and then run "tox" from this directory.

[tox]
# skipsdist = true
envlist = """
# py
py39
py310
py311
py312
# pypy"""

[testenv]
deps = """
pytest
numpy
scipy"""
commands = "pytest"